# ppt2

./: .gitignore  README.md  download_data.sh  main.py  pyproject.toml  slurm_launch.sh  slurm_launch_phase0.sh  slurm_launch_phase1.sh  submit_job.sh  submit_job_phase0.sh  submit_job_phase1.sh
data_mixes/: OLMo-mix-0625-150Bsample.txt  v3-small-ppl-validation.txt
scripts/: 1b.py  phase0_ai2.py  phase0_ai2_launch.py  phase0_nyu.py  phase1_nyu.py
src/: make_data.py
