[project]
name = "ppt2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ai2-olmo-core>=2.2.0",
    "ai2-olmo-eval>=0.8.6",
    "beaker-py>=1.37.0,<2.0",
    "einops>=0.8.1",
    "flash-attn>=2.8.3",
    "google-cloud>=0.34.0",
    "google-cloud-compute>=1.39.0",
    "ipykernel>=6.30.1",
    "wandb>=0.22.2",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
